add header html

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <a href="#" class="navbar-brand">Recipe Book</a>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Shopping List</a></li>
+    </ul>
+    <div class="navbar-nav navbar-right">
+      <a href="#" id="navbarDropdown" class="nav-link dropdown-toggle" role="dropdown">Manage</a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#">Save Data</a>
+        <a class="dropdown-item" href="#">Fetch Data</a>
+      </div>
+    </div>
+  </div>
+</nav>
