--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,27 @@
+<div class="row">
+  <div class="col">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col">
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action"
+        *ngFor="let recipe of recipes">
+        <div class="row">
+          <div class="col">
+            <div class="d-flex justify-content-between">
+              <h5 class="mb-1">{{ recipe.name }}</h5>
+            </div>
+            <p class="mb-1">{{ recipe.description }}</p>
+          </div>
+          <div class="col-auto">
+            <img class="img-fluid recipe-thumb" [src]="recipe.imagePath" alt="image">
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 <app-recipe-item></app-recipe-item>
