--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-primary">
+<nav class="navbar navbar-expand navbar-dark bg-primary mb-3">
   <a href="#" class="navbar-brand">Recipe Book</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
