--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,32 @@
-<p>recipe-detail works!</p>
+<div class="row">
+  <div class="col">
+    <img class="img-fluid" src="" alt="">
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="dropdown">
+      <button type="button" class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">To Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    Description
+  </div>
+  <div class="col-12">
+    Ingredient
+  </div>
+</div>
