--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,27 @@
-<p>shopping-edit works!</p>
+<div class="row">
+  <div class="col">
+    <form>
+      <div class="row">
+        <div class="col-5">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name">
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="form-group">
+            <label for="amount">Amount</label>
+            <input type="text" class="form-control" id="amount">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-success" type="submit">Add</button>
+          <button class="ml-2 btn btn-danger" type="button">Delete</button>
+          <button class="ml-2 btn btn-primary" type="button">Delete</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
