--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,13 @@
-<p>recipe-item works!</p>
+<a href="#" class="list-group-item list-group-item-action">
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">{{ recipe.name }}</h5>
+      </div>
+      <p class="mb-1">{{ recipe.description }}</p>
+    </div>
+    <div class="col-auto">
+      <img class="img-fluid recipe-thumb" [src]="recipe.imagePath" alt="image">
+    </div>
+  </div>
+</a>
