--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col">
-    <img class="img-fluid" src="" alt="">
+    <img class="img-fluid" [src]="recipe.imagePath" [alt]="recipe.name">
   </div>
 </div>
 <div class="row">
   <div class="col">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -23,9 +23,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-12">
-    Description
-  </div>
+  <div class="col-12">{{ recipe.description }}</div>
   <div class="col-12">
     Ingredient
   </div>
