--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" class="list-group-item list-group-item-action">
+<a
+  href="#"
+  class="list-group-item list-group-item-action"
+  (click)="onSelected()">
   <div class="row">
     <div class="col">
       <div class="d-flex justify-content-between">
