--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,12 +5,14 @@
       <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
       <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
     </ul>
-    <div class="navbar-nav navbar-right">
-      <a href="#" id="navbarDropdown" class="nav-link dropdown-toggle" role="dropdown">Manage</a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Save Data</a>
-        <a class="dropdown-item" href="#">Fetch Data</a>
-      </div>
-    </div>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown" [appDropdown]="dropdown">
+        <a href="#" id="navbarDropdown" class="nav-item nav-link dropdown-toggle" role="dropdown">Manage</a>
+        <div class="dropdown-menu dropdown-menu-right" #dropdown aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Save Data</a>
+          <a class="dropdown-item" href="#">Fetch Data</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
