--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,11 +10,11 @@
 </div>
 <div class="row">
   <div class="col">
-    <div class="dropdown">
+    <div class="dropdown" [appDropdown]="dropdown">
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
-      <div class="dropdown-menu">
+      <div class="dropdown-menu" #dropdown>
         <a class="dropdown-item" href="#">To Shopping List</a>
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Delete Recipe</a>
