--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,8 +9,7 @@
     <div class="list-group">
       <app-recipe-item
         *ngFor="let recipeEl of recipes"
-        [recipe]="recipeEl"
-        (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+        [recipe]="recipeEl"></app-recipe-item>
     </div>
   </div>
 </div>
