adds basic routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
   <a href="#" class="navbar-brand">Recipe Book</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
-      <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/recipes">Recipes</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/shopping-list">Shopping List</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown" [appDropdown]="dropdown">
