--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,8 +16,8 @@
       </button>
       <div class="dropdown-menu" #dropdown>
         <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a>
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Delete Recipe</a>
+        <a class="dropdown-item">Edit Recipe</a>
+        <a class="dropdown-item">Delete Recipe</a>
       </div>
     </div>
   </div>
