--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,24 +10,27 @@
               class="form-control"
               id="name"
               name="name"
-              ngModel>
+              ngModel
+              required>
           </div>
         </div>
         <div class="col-2">
           <div class="form-group">
             <label for="amount">Amount</label>
             <input
-              type="text"
+              type="number"
               class="form-control"
               id="amount"
               name="amount"
-              ngModel>
+              ngModel
+              required
+              pattern="^[1-9]+[0-9]*$">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="f.invalid">Add</button>
           <button class="ml-2 btn btn-danger" type="button">Delete</button>
           <button class="ml-2 btn btn-primary" type="button">Delete</button>
         </div>
