--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-12" formArrayName="ingredients">
           <div
-            class="row"
+            class="row mt-3"
             *ngFor="let ingredientControl of ingredients.controls; let i = index"
             [formGroupName]="i">
             <div class="col-8">
@@ -68,9 +68,15 @@
                 formControlName="amount">
             </div>
             <div class="col-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger" type="button">X</button>
             </div>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add Ingredient</button>
         </div>
       </div>
     </form>
