--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
       <div class="dropdown-menu" #dropdown>
         <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a>
         <a class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a>
-        <a class="dropdown-item">Delete Recipe</a>
+        <a class="dropdown-item" (click)="onDeleteRecipe()">Delete Recipe</a>
       </div>
     </div>
   </div>
