--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -72,7 +72,7 @@
                 formControlName="amount">
             </div>
             <div class="col-2">
-              <button class="btn btn-danger" type="button">X</button>
+              <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
         </div>
