--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 col-md-6 offset-md-3">
     <form>
       <div class="form-group">
         <label for="email">E-Mail</label>
@@ -10,8 +10,12 @@
         <input type="password" id="password" class="form-control">
       </div>
       <div>
-        <button class="btn btn-primary">Sign Up</button>
-        <button class="btn btn-primary ml-3">Switch to Login</button>
+        <button class="btn btn-primary" type="submit">
+          {{ isLoginMode ? 'Login' : 'Sign Up' }}
+        </button>
+        <button class="btn btn-primary ml-3" type="button" (click)="onSwitchMode()">
+          Switch to Login
+        </button>
       </div>
     </form>
   </div>
