--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,30 @@
 <div class="row">
   <div class="col-12 col-md-6 offset-md-3">
-    <form>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
         <label for="email">E-Mail</label>
-        <input type="email" id="email" class="form-control">
+        <input
+          type="email"
+          id="email"
+          class="form-control"
+          ngModel
+          name="email"
+          required
+          email>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control">
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          ngModel
+          name="password"
+          required
+          minlength="6">
       </div>
       <div>
-        <button class="btn btn-primary" type="submit">
+        <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">
           {{ isLoginMode ? 'Login' : 'Sign Up' }}
         </button>
         <button class="btn btn-primary ml-3" type="button" (click)="onSwitchMode()">
