--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-12 col-md-6 offset-md-3">
-    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+    <div class="alert alert-danger" *ngIf="error">{{ error }}</div>
+    <div *ngIf="isLoading" class="text-center">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
       <div class="form-group">
         <label for="email">E-Mail</label>
         <input
