--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,17 @@
   <a href="#" class="navbar-brand">Recipe Book</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/recipes">Recipes</a></li>
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a routerLinkActive="active" class="nav-link" routerLink="/recipes">Recipes</a>
+      </li>
       <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/auth">Authentication</a></li>
       <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/shopping-list">Shopping List</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown" [appDropdown]="dropdown">
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a class="nav-link" role="button">Logout</a>
+      </li>
+      <li class="nav-item dropdown" [appDropdown]="dropdown" *ngIf="isAuthenticated">
         <a id="navbarDropdown" class="nav-item nav-link dropdown-toggle" role="dropdown">Manage</a>
         <div class="dropdown-menu dropdown-menu-right" #dropdown aria-labelledby="navbarDropdown">
           <a class="dropdown-item" (click)="onSaveData()">Save Data</a>
