Attaching the Token with an Interceptor

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       <li class="nav-item" *ngIf="isAuthenticated">
         <a routerLinkActive="active" class="nav-link" routerLink="/recipes">Recipes</a>
       </li>
-      <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/auth">Authentication</a></li>
+      <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/auth" *ngIf="!isAuthenticated">Authentication</a></li>
       <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="/shopping-list">Shopping List</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
