--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" role="button">Logout</a>
+        <a class="nav-link" role="button" (click)="onLogout()">Logout</a>
       </li>
       <li class="nav-item dropdown" [appDropdown]="dropdown" *ngIf="isAuthenticated">
         <a id="navbarDropdown" class="nav-item nav-link dropdown-toggle" role="dropdown">Manage</a>
