--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 col-md-6 offset-md-3">
     <!-- <div class="alert alert-danger" *ngIf="error">{{ error }}</div> -->
-    <app-alert [message]="error" *ngIf="error"></app-alert>
+    <app-alert [message]="error" *ngIf="error" (closeDialog)="onHandleError()"></app-alert>
     <div *ngIf="isLoading" class="text-center">
       <app-loading-spinner></app-loading-spinner>
     </div>
