--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,7 +10,8 @@
 </div>
 <div class="row">
   <div class="col">
-    <div class="dropdown" [appDropdown]="dropdown">
+    <!-- <div class="dropdown" [appDropdown]="dropdown"> -->
+    <div class="dropdown">
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
